--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -96,6 +96,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 80%;
+    margin-top: 5rem;
 }
 
 .wrapper-item {
@@ -112,8 +113,40 @@ nav {
 .title {
     font-weight: lighter;
     font-size: 4rem;
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
-.title > span{
+.title > span {
     font-weight: bold;
 }
+
+.main-list {
+    display: flex;
+    flex-flow: nowrap column;
+    list-style: none;
+    width: 80%;
+    gap: 1rem;
+}
+
+.main-list > li {
+    border-color: black;
+    border-width: 2px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 0px 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.icon-button {
+    text-decoration: none;
+    color: black;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.icon-button > img {
+    height: 30px;
+}
+
