--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -64,7 +64,7 @@ nav {
     flex-wrap: nowrap;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .nav-item {
@@ -80,6 +80,41 @@ nav {
 
 .nav-item:last-child {
     height: auto;
+    display: flex;
+    flex-flow: nowrap row;
+    gap: 1rem;
+    align-items: center;
+}
+
+.toggle-container {
+    background-color: purple;
+    width: 40px;
+    height: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    position: relative;
+}
+
+.toggle-btn::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 0.3s;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+/* Desplaza el botón cuando está activado (checked) */
+#toggle:checked + .toggle-btn::before {
+    transform: translateX(20px);
+}
+
+.hidden {
+    display: none;
 }
 
 .content {
@@ -96,7 +131,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 .wrapper-item {
