--- a/src/views/html.html
+++ b/src/views/html.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    HTML
+    <div class="wrapper">
+        <div class="wrapper-item">
+            <h2 class="subtitle-question font-rubik-italic">
+                Frontend Quiz!
+            </h2>
+            <h2 class="subtitle">
+                What does HTML stand for?
+            </h2>
+        </div>
+        <div class="wrapper-item">
+
+        </div>
+    </div>
 </body>
 </html>
