--- a/src/views/html.html
+++ b/src/views/html.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>html</title>
+    <link rel="stylesheet" href="/src/styles/html.css">
 </head>
 <body>
     <div class="wrapper">
@@ -16,8 +17,14 @@
             </h2>
         </div>
         <div class="wrapper-item">
+            <ul class="main-list" id="list-html">
 
+            </ul>
+            <button class="button-submit" id="button-submit">
+                Submit Answer
+            </button>
         </div>
     </div>
+    <script src="/src/scripts/html.js"></script>
 </body>
 </html>
