--- a/src/views/html.html
+++ b/src/views/html.html
@@ -23,6 +23,9 @@
             <button class="button-submit" id="button-submit">
                 Submit Answer
             </button>
+            <button class="button-submit hidden" id="button-next">
+                Next
+            </button>
         </div>
     </div>
     <script src="/src/scripts/html.js"></script>
