Handle questions finish

--- a/src/views/html.html
+++ b/src/views/html.html
@@ -12,8 +12,7 @@
             <h2 class="subtitle-question font-rubik-italic">
                 Frontend Quiz!
             </h2>
-            <h2 class="subtitle">
-                What does HTML stand for?
+            <h2 class="subtitle" id="subtitle">
             </h2>
         </div>
         <div class="wrapper-item">
